# MasterDnsVPN

./: .coveragerc  .gitignore  .pylintrc  CHANGES.md  README.MD  README_ES.MD  README_FA.MD  README_IT.MD  README_RU.MD  README_ZH.MD  build_setup.py  client.py  client_config.json  client_config.py.simple  client_config.toml.simple  go.mod  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  server_config.json  server_config.py  server_config.py.simple  server_config.toml  server_config.toml.simple  server_linux_install.sh  testoutput.txt  uninstall_masterdnsvpn.sh
.github/workflows/: build-test-cython.yml  build.yml  test.yml
cmd/client/: main.go
cmd/server/: main.go
dns_utils/: ARQ.py  DNSBalancer.py  DNS_ENUMS.py  DnsPacketParser.py  PacketQueueMixin.py  PingManager.py  PrependReader.py  UDPClient.py  __init__.py  compression.py  config_loader.py  dns_packet_parser.py  utils.py
docker/: Dockerfile  build-single-platform.sh  buildx-multi-platform.sh  docker-compose.yml
docs/: wrapper-dashboard.md
gui/: dashboard.html
internal/arq/: arq.go  arq_test.go  close_policy_test.go  manager.go  manager_test.go  scheduler.go  scheduler_test.go
internal/basecodec/: lowerbase36.go  lowerbase36_test.go  rawbase64.go
internal/client/: async_runtime.go  balancer.go  client.go  client_test.go  client_utils.go  dispatcher.go  dns_listener.go  (+19 more)
monitoring/: README.md  docker-compose.yml  install.sh  prometheus.yml
tests/: test_arq.py  test_client.py  test_dns_utils.py  test_init.py  test_packet_queue_mixin.py  test_server.py  test_utils.py
(+77 files in other folders)
