[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "masterdnsvpn"
version = "1.0.0"
description = "DNS tunneling VPN that encapsulates TCP traffic in DNS queries to bypass censorship"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
